@@ -1,11 +1,11 @@
 0.8
 + Try to make zooming smoother (argh..)
 + Documentation
-+ Delete images? (Bjoern Martensen/luzi)
 + Resize, rotate, and save? (luzi)
 + Side/bottom panel for thumbnails of all images in list (use .thumbnails?)
 + Fading image transition..? (William Rea)
 + Preload next (and/or previous) image? (Mike Massonnet)
++ Cannot 'open folder' while still searching for images
 
 Future
 + Bookmarks (Bookmark Image, Bookmark List, Manage (to create files))?
