@@ -1,4 +1,5 @@
 v0.8 - Pending
+	+ Ability to delete an image (Bjoern Martensen/Luzi)
 	+ Added French translation (Mike Massonnet)
 	+ Added Polish translation (Tomasz Dominikowski)
 
